# gof

./: README.md  pyproject.toml
src/abstract_factory/: README.md  app.py  empresa.py  lanchonete.py  produto_humburquer.py  produto_x_salada.py
src/adapter/: README.md  adapter_conectar_vizinho.py  app.py  comptador.py  meu_computador.py  meu_roteador.py  roteador.py  vizinho_roteador.py
src/bridge/: README.md  app.py  banana.py  banana_implementacao.py  frutas.py  implementacao.py  maca.py  maca_implementacao.py
src/builder/: README.md  app.py  humburquer.py  humburquer_builder.py  novo_produto.py  produto.py  produto_builder.py  x_salada.py  x_salada_builder.py
src/factory_method/: README.md  app.py  empresa.py  lanchonete.py  prodtuto_x_salada.py  produto.py
src/prototype/: README.md  app.py  do.py  fa.py  la.py  mi.py  nota_musical.py  partitura.py  re.py  si.py  sol.py
src/singleton/: README.md  app.py  janela.py  singleton.md
